--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <!--Styles-->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/design.css">
     <!--Fin styles-->
     <title>Aluminios Soberanis</title>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="logo">
+            <h1>AS</h1>
+        </div>
         <a class="navbar-brand" href="#">Aluminios Soberanis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +54,107 @@
     </nav>
 
     <!--Home-->
-    
+    <div class="header">
+        <div class="title-img">
+            <h1> Aluminios Soberanis</h1>
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="container">
+            <div class="section-main">
+                <blockquote class="blockquote text-center">
+                    <p class="mb-0">Maquilación e intalación de aluminio y vidrio.</p>
+                    <footer class="blockquote-footer"></footer><cite title="Source Title">Siempre mejorando para ti</cite></footer>
+                  </blockquote>
+            </div>
+            <div class="section-cards">
+                <div class="row">
+                    <div class="col-md-4 card1">
+                        <div class="image-banner1"></div>
+                    </div>
+                    <div class="col-md-4 card2">
+                        <div class="image-banner2"></div>
+                    </div>
+                    <div class="col-md-4 card3">
+                        <div class="image-banner3"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="more">
+                <button type="button" class="btn btn-outline-success">Conoce más</button>
+            </div>
+            
+            <!--<div class="inter">
+                <div class="row">
+                    <div class="col-md-6 inter-left" >
+                        <p>Comprometidos con la calidad</p>
+                    </div>
+                    <div class="col-md-6 inter-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, hic. Alias, magnam nihil molestias officiis inventore expedita dolores vero aliquam! Ea dolorum accusamus vitae minus magni aliquam illum vel temporibus.</div>
+                </div>
+            </div>-->
+        </div>
+
+        <div class="banner">
+            <div class="icons">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 icon1">
+                            <svg width="8em" height="8em" viewBox="0 0 16 16" class="bi bi-shop" fill="current" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z"/>
+                            </svg>
+                            <p>Instalación</p>
+                        </div>
+                        <div class="col-md-3 icon2">
+                            <svg width="8em" height="8em" viewBox="0 0 16 16" class="bi bi-clock" fill="current" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
+                                <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
+                            </svg>
+                            <p>Puntualidad en hora de entrega</p>
+                        </div>
+                        <div class="col-md-3 icon3">
+                            <svg width="8em" height="8em" viewBox="0 0 16 16" class="bi bi-gear" fill="current" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 0 1 4.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 0 1-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 0 1 1.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 0 1 2.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 0 1 2.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 0 1 1.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 0 1-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 0 1 8.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 0 0 1.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 0 0 .52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 0 0-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 0 0-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 0 0-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 0 0-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 0 0 .52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 0 0 1.255-.52l.094-.319z"/>
+                                <path fill-rule="evenodd" d="M8 5.754a2.246 2.246 0 1 0 0 4.492 2.246 2.246 0 0 0 0-4.492zM4.754 8a3.246 3.246 0 1 1 6.492 0 3.246 3.246 0 0 1-6.492 0z"/>
+                            </svg>
+                            <p>Mantenimiento</p>
+                        </div>
+                        <div class="col-md-3 icon4">
+                            <svg width="8em" height="8em" viewBox="0 0 16 16" class="bi bi-star-fill" fill="current" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                            </svg>
+                            <p>calidad</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="section-outline">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 section-card1">
+                        <div class="card">
+                            <div class="card-header"><h4>Fachadas de vidrio</h4></div>
+                            <div class="card-body">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ab. Molestias sed officia sunt magni rerum tempora. Cumque totam aspernatur sed? Veritatis ullam, adipisci hic esse velit commodi dolor placeat.</p>
+                            </div>
+                            <div class="card-footer">
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 section-card2">
+                        <div class="card">
+                            <div class="card-header"><h4>Fachadas</h4></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
     <!--End home-->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
