new card in the banner

--- a/index.html
+++ b/index.html
@@ -136,12 +136,21 @@
                 <div class="row">
                     <div class="col-md-6 section-card1">
                         <div class="card">
-                            <div class="card-header"><h4>Fachadas de vidrio</h4></div>
+                            <div class="card-header"><h4>Ventanas</h4></div>
                             <div class="card-body">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ab. Molestias sed officia sunt magni rerum tempora. Cumque totam aspernatur sed? Veritatis ullam, adipisci hic esse velit commodi dolor placeat.</p>
+                                <h5>Grosor de aluminio</h5>
+                                <p>° 3 Pulgadas</p>
+                                <p>° 2 Pulgadas</p>
+
+                                <h5>Color del aluminio</h5>
+                                <p>° Natural</p>
+                                <p>° Blanco</p>
+                                <p>° Bronce (Negro)</p>
+                                <p>° Champagne</p>
+                                <p>° Madera</p>
                             </div>
                             <div class="card-footer">
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <h5>AS</h5><p>Aluminios Soberanis</p>
                             </div>
                         </div>
                     </div>
