new card in the banner Vidrio

--- a/index.html
+++ b/index.html
@@ -156,7 +156,22 @@
                     </div>
                     <div class="col-md-6 section-card2">
                         <div class="card">
-                            <div class="card-header"><h4>Fachadas</h4></div>
+                            <div class="card-header"><h4>Vidrio</h4></div>
+                            <div class="card-body">
+                                <h5>Grosor del vidrio</h5>
+                                <p>° 3 mm (milimetros)</p>
+                                <p>° 6 mm (milimetros)</p>
+                                <p>° 10 mm (milimetros)</p>
+                                <p>° 12 mm (milimetros)</p>
+
+                                <h5>Color del vidrio</h5>
+                                <p>° Verde</p>
+                                <p>° Humo</p>
+                                <p>° Claro</p>
+                            </div>
+                            <div class="card-footer">
+                                <h5>AS</h5><p>Aluminios Soberanis</p>
+                            </div>
                         </div>
                     </div>
                 </div>
