--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="row">
                     <div class="col-md-6 section-card1">
                         <div class="card">
-                            <div class="card-header"><h4>Ventanas</h4></div>
+                            <div class="card-header"><h4>Aluminio</h4></div>
                             <div class="card-body">
                                 <h5>Grosor de aluminio</h5>
                                 <p>° 3 Pulgadas</p>
