--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Styles-->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/design.css">
+    <link rel="stylesheet" href="assets/css/boot.css">
     <!--Fin styles-->
     <title>Aluminios Soberanis</title>
 </head>
@@ -177,6 +177,22 @@
                 </div>
             </div>
         </div>
+
+        <!--Gallery-->
+        <div class="gallery">
+            <div class="title-gallery">
+                <h3>Galeria</h3>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 gallery1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
+                    <div class="col-md-3 gallery2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
+                    <div class="col-md-3 gallery3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
+                    <div class="col-md-3 gallery4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
+                </div>
+            </div>
+        </div>
+        <!--End Gallery-->
 
     </div>
     <!--End home-->
