--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Styles-->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/boot.css">
+    <link rel="stylesheet" href="assets/css/boots.css">
     <!--Fin styles-->
     <title>Aluminios Soberanis</title>
 </head>
@@ -183,12 +183,75 @@
             <div class="title-gallery">
                 <h3>Galeria</h3>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 gallery1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
-                    <div class="col-md-3 gallery2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
-                    <div class="col-md-3 gallery3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
-                    <div class="col-md-3 gallery4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, similique.</div>
+            <div class="gallery-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="gallery1">
+                                <div class="texts">
+                                    <p>Cajón de vidrio</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="gallery2">
+                                <div class="texts">
+                                    <p>Fachada de vidrio</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="gallery3">
+                                <div class="texts">
+                                    <p>Ventana de cuadricula</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="gallery4">
+                                <div class="texts">
+                                    <p>Espejo</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="gallery">
+            <div class="gallery-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="gallery1">
+                                <div class="texts">
+                                    <p>Cajón de vidrio</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="gallery2">
+                                <div class="texts">
+                                    <p>Fachada de vidrio</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="gallery3">
+                                <div class="texts">
+                                    <p>Ventana de cuadricula</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="gallery4">
+                                <div class="texts">
+                                    <p>Espejo</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -196,6 +259,63 @@
 
     </div>
     <!--End home-->
+
+
+    <div class="footer">
+        <div class="logo-footer">
+            <h1>AS</h1><p>Aluminios Soberanis</p>
+        </div>
+        <div class="section-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Solicitar presupuesto</h4>   
+                        <form action="">
+                            <div class="form-group">
+                                <label for="">Nombre completo</label>
+                                <input type="text" class="form-control" placeholder="nombre">
+                            </div>
+                            <div class="form-group">
+                                <label for="">Numero telefonico o correo</label>
+                                <input type="text" class="form-control" placeholder="número telefonico o correo">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlSelect1">Producto</label>
+                                <select class="form-control" id="exampleFormControlSelect1">
+                                    <option>Ventana</option>
+                                    <option>Puerta</option>
+                                    <option>Cancel de baño</option>
+                                    <option>Fachada</option>
+                                    <option>Espejo</option>
+                                    <option>Gabetero</option>
+                                    <option>cajon de vidrio</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Otro</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>  
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-danger">Solicitar</button>
+                            </div>                                                      
+                        </form>
+                    </div>
+                    <div class="col-md-6 links-page">
+                        <h4>Contactanos</h4>
+                        <div class="form-links">
+                            <p>Leonardo Can Soberanis</p>
+                            <p>Numero celular</p>
+                            <p>9999951004</p>
+                        </div>
+                        <div class="form-emails">
+                            <h5>Correo</h5>
+                            <p>Alexiscancauich@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>    
