--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="col-md-3">
                             <div class="gallery1">
                                 <div class="texts">
-                                    <p>Cajón de vidrio</p>
+                                    <p>Cancel Templado</p>
                                 </div>
                             </div>
                         </div>
