--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <div class="col-md-3">
                             <div class="gallery2">
                                 <div class="texts">
-                                    <p>Fachada de vidrio</p>
+                                    <p>Cancel de baño</p>
                                 </div>
                             </div>
                         </div>
